--- a/Meetings /GroupMeetingsLog.tex
+++ b/Meetings /GroupMeetingsLog.tex
@@ -16,7 +16,7 @@
  know each person in the group. \\  \hline
  Outcome: &  Each member is to develop some ideas for how initial design of system and look into using JavaScript and PHP and as a
  means of programming. \\  \hline
- Weekly Tasks Completed: & N/A\\  
+
  \hline
  \multicolumn{2}{ c|}{} \\
  \hline
@@ -29,8 +29,8 @@
   Outcome: &  Inyeol presented group with a UML diagram of a potential
   system and discussion is raised into changing the programming
   language to Java. \\  \hline
-  Weekly Tasks Completed: & 50 \\  \hline
-   \multicolumn{2}{ c|}{} \\
+
+  \multicolumn{2}{ c|}{} \\
   \hline
   \multicolumn{2}{ |l|}{ \textbf{Meeting 3}} \\  \hline
   Date: & 26/01/2015 (1pm)  \\  \hline
@@ -40,7 +40,7 @@
   language that is going to be used.  \\ \hline
   Outcome: &  Java chosen as programming language and tasks set for each
   member to complete a section for the first assessment. \\  \hline
-  Weekly Tasks Completed: & TEXT\\ 
+
   \hline 
   \multicolumn{2}{ c|}{} \\
   \hline
@@ -51,8 +51,6 @@
   Agenda: & Looking at different techniques for road development. \\ \hline
   Outcome: &  Discussion on road technique and ensure people are working
   on tasks during Mondays meeting for the first assessment. \\  \hline
-  Weekly Tasks Completed: & 100 members attended meeting with example and key ideas behind road implementation and mathematical \\  \hline
-
 
 \end{tabular}
 \end{table}
@@ -71,9 +69,7 @@
 		 with programming should continue developing a small example
 		 to present to all for a better understanding of programming
 		 and those less confident with programming should continue
-		 looking at the mathematical aspects behind road development. \\  \hline
-		 Weekly Tasks Completed: & TEXT\\ 
-		 \hline
+		 looking at the mathematical aspects behind road development. \\ \hline
 	\end{tabular}
 \end{table}
 
@@ -86,8 +82,6 @@
 		Duration: & 30 minutes \\  \hline
 		Agenda: &  \\ \hline
 		Outcome: & Discussion and review of the initial report and what can be done by other members to make it better. Jie described the code he had been working on for the system and the continued development into  \\  \hline
-		Weekly Tasks Completed: & Somewhat\\ 
-		\hline
 	\end{tabular}
 \end{table}
 
@@ -100,8 +94,6 @@
 		Duration: &  45 minutes\\  \hline
 		Agenda: & Editing the Initial Report and getting more contribution from group members for first section and brief talk on presentation and get the prototype on Github. \\ \hline
 		Outcome: &  Jie illustrated to the group a prototype and has explained the code together. Tanda and Jie had discussion about the GUI of the simulation and how to present the visualisation better shall be worked on by all group members. Mark assigned task to create presentation  \\  \hline
-		Weekly Tasks Completed: & \\ 
-		\hline
 	\end{tabular}
 \end{table}
 
@@ -115,8 +107,6 @@
 		Agenda: & Initial Report feedback for submission next day, dicuss prototype and preperations for presentation\\ \hline
 		road development. \\ \hline
 		Outcome: & Finalising presentation as a group and dicussion of the prototype.   \\  \hline
-		Weekly Tasks Completed: & Late feedback on initial report, was not helpful. Presentation still needs to be completed.\\ 
-		\hline
 	\end{tabular}
 \end{table}
 
@@ -127,11 +117,9 @@
 		Date: & 13/02/2015 (1pm) \\  \hline
 		Attendance: & Jie, Mark, Tanda\\   \hline
 		Duration: & 1 hour (Tand and Jie) 10 minutes (Mark)  \\  \hline
-		Agenda: & Make sure there is contribution to the Github from all members, final report and progression with implementation. Lead programmers need to distribute tasks.\\  \hline
-		road development. Begin looking into the way we shall work together as a team despite some members not being the strongest programmers find a way to keep them actively invovled as issues that arose from the feedback given by lectuerer should be adressed and taken care of for the final report \\ \hline
-		Outcome: & Jie and Tanda going to work on system T Junction that can be used for all memebrs to be presented on Monday \\  \hline
-		Weekly Tasks Completed: & TEXT\\ 
-		\hline
+		Agenda: & Make sure there is contribution to the Github from all members, final report and progression with implementation. Lead programmers need to distribute tasks.
+		road development. Begin looking into the way we shall work together as a team despite some members not being the strongest programmers find a way to keep them actively involved as issues that arose from the feedback given by lecturer should be addressed and taken care of for the final report \\ \hline
+		Outcome: & Jie and Tanda going to work on system T Junction that can be used for all members to be presented on Monday \\  \hline
 	\end{tabular}
 \end{table}
 
@@ -175,7 +163,55 @@
 	\begin{tabular}{|m{8cm}|m{6cm}|}
 		\hline
 		\multicolumn{2}{ |l|}{ \textbf{Meeting 13}} \\  \hline
-		Date: & 20/02/2015 (1pm) \\  \hline
+		Date: & /02/2015 (1pm) \\  \hline
+		Attendance: & \\ \hline
+		Duration: &  \\  \hline
+		Agenda: & \\ \hline
+		Outcome: & \\  \hline
+	\end{tabular}
+\end{table}
+
+\begin{table}[ht!]
+	\begin{tabular}{|m{8cm}|m{6cm}|}
+		\hline
+		\multicolumn{2}{ |l|}{ \textbf{Meeting 14}} \\  \hline
+		Date: & /03/2015 (1pm) \\  \hline
+		Attendance: & \\ \hline
+		Duration: &  \\  \hline
+		Agenda: & \\ \hline
+		Outcome: & \\  \hline
+	\end{tabular}
+\end{table}
+
+\begin{table}[ht!]
+	\begin{tabular}{|m{8cm}|m{6cm}|}
+		\hline
+		\multicolumn{2}{ |l|}{ \textbf{Meeting 15}} \\  \hline
+		Date: & /03/2015 (1pm) \\  \hline
+		Attendance: & \\ \hline
+		Duration: &  \\  \hline
+		Agenda: & \\ \hline
+		Outcome: & \\  \hline
+	\end{tabular}
+\end{table}
+
+\begin{table}[ht!]
+	\begin{tabular}{|m{8cm}|m{6cm}|}
+		\hline
+		\multicolumn{2}{ |l|}{ \textbf{Meeting 16}} \\  \hline
+		Date: & /03/2015 (1pm) \\  \hline
+		Attendance: & \\ \hline
+		Duration: &  \\  \hline
+		Agenda: & \\ \hline
+		Outcome: & \\  \hline
+	\end{tabular}
+\end{table}
+
+\begin{table}[ht!]
+	\begin{tabular}{|m{8cm}|m{6cm}|}
+		\hline
+		\multicolumn{2}{ |l|}{ \textbf{Meeting 17}} \\  \hline
+		Date: & /03/2015 (1pm) \\  \hline
 		Attendance: & \\ \hline
 		Duration: &  \\  \hline
 		Agenda: & \\ \hline
