--- a/FinalReport.tex
+++ b/FinalReport.tex
@@ -33,7 +33,7 @@
 \begin{minipage}{0.4\textwidth}
 	\begin{flushright} \large
 		\emph{Lecturer:} \\
-		Name
+		Dr. Laurence Tratt
 	\end{flushright}
 \end{minipage}\\[4cm]
 	
@@ -41,7 +41,6 @@
 	\tableofcontents
 	
 	\section{Introduction} %Introduce project and aim
-	\subsection{Scope}
 	\subsection{Objectives} %Making The Map - More maps addtional stuff
 	\section{Requirements} %What is needed for the project to be succesful 
 	\section{Related Work} %Examples of systems and dicussion of them compared to what we are creating.
@@ -68,7 +67,6 @@
 	\subsection{Testing} %How we tested the program (e.g Black/White Box)
 	\section{Group Dicussion}
 	\subsection{Team Organisation} %How each member contributed to the project and how the workload was divided 
-	The team 
 	\textbf{Work Load Division:}\\ 
 	\section{Conclusion}
 	\subsection{Lessons Learned} 
@@ -87,16 +85,15 @@
 	\end{thebibliography}
 	
 
-	\section{Appendices}
-	\subsection{Meeting Diaries} %Meeting Minutes kept and updated by project coordinator
-	
+	\section{Appendices} % ALL THE EXTRA STUFF.
+	\subsection{Meeting Diaries} %Meeting Minutes kept and updated by project coordinator (Tanda)
 			\begin{tabular}{|m{2cm}|m{12cm}|}
 				\hline
 				\multicolumn{2}{ |l|}{ \textbf{Meeting 1}} \\  \hline
-				Date: & 1 Hour \\  \hline
+				Date: & 19/01/2015 \\  \hline
 				Attendance: & Mark, Inyeol, Qiu, Jie, Tanda  \\   \hline
-				Duration: & TEXT \\  \hline
-				Agenda: & Aim for project, ways of developing project and meet group
+				Duration: & 1 Hour \\  \hline
+				Agenda: & Aim for project, ways of developing project and meet group.
 				members, decide which days are best for meetings and get to
 				know each person in the group. \\  \hline
 				Outcome: &  Each member is to develop some ideas for how initial design of system and look into using JavaScript and PHP and as a
@@ -124,20 +121,19 @@
 				language that is going to be used.  \\ \hline
 				Outcome: &  Java chosen as programming language and tasks set for each
 				member to complete a section for the first assessment. \\  \hline
+				\multicolumn{2}{ c}{} \\
+				 \hline
+				 \multicolumn{2}{ |l|}{ \textbf{Meeting 4}} \\  \hline
+				 Date: & 28/01/2015 (1 hour) \\  \hline
+				 Attendance: & Inyeol, Yun, Tanda, Jie  \\   \hline
+				 Duration: & 1 hour  \\  \hline
+				 Agenda: & Looking at different techniques for road development. \\ \hline
+				 Outcome: &  Discussion on road technique and ensure people are working
+				 on tasks during Mondays meeting for the first assessment. \\  \hline
 			\end{tabular}
 			
 			\begin{tabular}{|m{2cm}|m{12cm}|}
-				  \hline
-				  \multicolumn{2}{ |l|}{ \textbf{Meeting 4}} \\  \hline
-				  Date: & 28/01/2015 (1 hour) \\  \hline
-				  Attendance: & Inyeol, Yun, Tanda, Jie  \\   \hline
-				  Duration: & 1 hour  \\  \hline
-				  Agenda: & Looking at different techniques for road development. \\ \hline
-				  Outcome: &  Discussion on road technique and ensure people are working
-				  on tasks during Mondays meeting for the first assessment. \\  \hline
-				  
-				  \multicolumn{2}{ c}{} \\
-				  \hline
+				\hline
 				  \multicolumn{2}{|l|}{ \textbf{Meeting 5}} \\  \hline
 				  Date: & 30/01/2015 (1pm) \\  \hline
 				  Attendance: & Jie, Qiu, Inyeol, Mark, Tanda  \\   \hline
@@ -165,10 +161,73 @@
 				  Attendance: & Mark, Jie, Tanda, Qiu (Inyeol Pardoned)\\   \hline
 				  Duration: &  45 minutes\\  \hline
 				  Agenda: & Editing the Initial Report and getting more contribution from group members for first section and brief talk on presentation and get the prototype on Github. \\ \hline
-				  Outcome: &  Jie illustrated to the group a prototype and has explained the code together. Tanda and Jie had discussion about the GUI of the simulation and how to present the visualisation better shall be worked on by all group members. Mark assigned task to create presentation  \\  \hline
-			\end{tabular}
+				  Outcome: &  Jie illustrated to the group a prototype and has explained the code together. Tanda and Jie had discussion about the GUI of the simulation and how to present the visualisation better shall be worked on by all group members. Mark assigned task to create presentation \\
+				  \hline 
+				  \multicolumn{2}{ c}{} \\
+				    \hline 
+					\multicolumn{2}{ |l|}{ \textbf{Meeting 8}} \\  \hline
+					Date: & 09/02/2015 (3pm) \\  \hline
+					Attendance: & Mark, Qiu, Inyeol, Jie, Tanda \\   \hline
+					Duration: &  40 minutes \\  \hline
+					Agenda: & Initial Report feedback for submission next day, discuss prototype and preparations for presentation
+					road development. \\ \hline
+					Outcome: & Finalising presentation as a group and discussion of the prototype.   \\  \hline
+				\end{tabular}
+		
 			
-	
+				\begin{tabular}{|m{2cm}|m{12cm}|}
+					\hline
+					\multicolumn{2}{ |l|}{ \textbf{Meeting 9}} \\  \hline
+					Date: & 13/02/2015 (1pm) \\  \hline
+					Attendance: & Jie, Mark, Tanda\\   \hline
+					Duration: & 1 hour (Tand and Jie) 10 minutes (Mark)  \\  \hline
+					Agenda: & Make sure there is contribution to the Github from all members, final report and progression with implementation. Lead programmers need to distribute tasks.
+					road development. Begin looking into the way we shall work together as a team despite some members not being the strongest programmers find a way to keep them actively involved as issues that arose from the feedback given by lecturer should be addressed and taken care of for the final report \\ \hline
+					Outcome: & Jie and Tanda going to work on system T Junction that can be used for all members to be presented on Monday \\  \hline
+					\multicolumn{2}{ c}{} \\
+					\hline
+					\multicolumn{2}{ |l|}{ \textbf{Meeting 10}} \\  \hline
+					Date: & 16/02/2015 (3pm) \\  \hline
+					Attendance: & Tanda, Jie, Inyeol, Qiu, Mark\\   \hline
+					Duration: &  2 hours \\  \hline
+					Agenda: & Make sure there is contribution to the Github from all members, final report and progression with implementation. \\  \hline
+					Outcome: & Defining road sizes, Continuing with traffic light development. Defined and finalised the road design. Must have a basic application done to anaylse for Friday meeting. Lead programmers need to dicuss more with group about the implementation\\  \hline
+				\multicolumn{2}{ c}{} \\
+			\hline
+			\multicolumn{2}{ |l|}{ \textbf{Meeting 11}} \\  \hline
+			Date: & 20/02/2015 (1pm) \\  \hline
+			Attendance: & Jie, Tanda, Qiu, Inyeol\\ \hline
+			Duration: &  1 Hour \\  \hline
+			Agenda: & Finalise the structure of the Traffic Simulation, Finalise the user manual and continue distributing Final report sections to be completed as drafts.  \\ \hline
+			Outcome: & Qiu and Jie shall work on Line equation solver (due Monday) Inyeol continues programming on road development and Tanda discussed final report skeleton with Qiu.   \\  \hline
+		\end{tabular}
+
+		\begin{tabular}{|m{2cm}|m{12cm}|}
+			\hline
+			\multicolumn{2}{ |l|}{ \textbf{Meeting 12}} \\  \hline
+			Date: & 23/02/2015 (1pm) \\  \hline
+			Attendance: & Jie, Inyeol, Mark, Qiu, Tanda \\ \hline
+			Duration: &  45 minutes\\  \hline
+			Agenda: & Project coordinator (Tanda) distribute final report tasks among system analysts (Qiu and Mark) and discussion on road development with programmers.\\ \hline
+			Outcome: & Final report tasks distributed among Qiu, Mark and Tanda for Fridays meeting to look over. Inyeol and Jie discussed concerns and issues with system and are continuing to work on road development in terms of 'Lane connectors'. Based on project plan the group is still on track for the 27th for road development to be completed. Traffic Light object prototype created by Jie shall be worked on to be finalised and introduced in the system.\\  \hline
+			\multicolumn{2}{ c}{} \\
+			\hline
+			\multicolumn{2}{ |l|}{ \textbf{Meeting 14}} \\  \hline
+			Date: & 27/02/2015 (1pm) \\  \hline
+			Attendance: & \\ \hline
+			Duration: &  \\  \hline
+			Agenda: & \\ \hline
+			Outcome: & \\  \hline
+			\multicolumn{2}{ c}{} \\
+			\hline
+			\multicolumn{2}{ |l|}{ \textbf{Meeting 15}} \\  \hline
+			Date: & 02/03/2015 (3pm) \\  \hline
+			Attendance: & \\ \hline
+			Duration: &  \\  \hline
+			Agenda: & \\ \hline
+			Outcome: & \\  \hline
+		\end{tabular}
+
 	
 	\subsection{Personal Logs} %Each member should be completing there own log 
 	\subsection{Usecase Diagram} 
