--- a/FinalReport.tex
+++ b/FinalReport.tex
@@ -39,9 +39,17 @@
 	
 	\end{titlepage}
 	\tableofcontents
-	
+	\newpage
 	\section{Introduction} %Introduce project and aim
+	The intention of this report is to present and demonstrate the progression, development and overall outcome of the Traffic Simulation project.The report is structured into 11 sections each with a purpose to provide further understanding into the steps taken throughout the project as a whole. 
+	\\This first section is an introduction to the whole project and provides an understanding of what is to be expected throughout the entire report. The second section discusses the requirements needed for the project to be deemed successful and appropriate for the cause to fit what is needed. Section three looking into the different existing systems and how the system we are developing is different and any challenges brought about based upon what exists already. Section four discusses the system design including a user manual. In the fifth section of the report is discussion on the process of the actual implementation completed by the two main programmers in the team, which includes how prototypes were created and developed into the final application, as well as some discussion on any system design changes that happened. In the sixth section is a full technical evaluation of the system including the methods used to test the system. In the seventh section is a group evaluation of how the team has been organized throughout the project and then a discussion about the work load division, this section should give a clear insight into the team work throughout project. The eighth section of the report is a conclusion of the project as a whole specifically looking at the lessons learned about program development, what we learnt from about group work and lastly how we would progress in the future with the project. The tenth section is simply the bibliography references to sources we used throughout the report and lastly the eleventh section is the appendices of all additional relevant documents such as a group meetings, personal logs, project plans and documents that supported the system design of the application.\\
+	Overall, this introduction should outline what is to be expected throughout the entire and give insight into how the group worked together to successfully create a traffic simulation.
+	
+	\subsection{Scope}%Need help here.
+	
 	\subsection{Objectives} %Making The Map - More maps addtional stuff
+	The aim of the project is to build an application which will simulate cars movement on the UK road system, the users aim is able to find the perfect balance of (word here). If a road system is created using the application where the traffic light system is illogical, for example the wrong traffic light position or wrong traffic light interval this will result in a crash or unfair waiting time.
+	The value of this system is…
 	\section{Requirements} %What is needed for the project to be succesful 
 	\section{Related Work} %Examples of systems and dicussion of them compared to what we are creating.
 	\section{System Design}
@@ -76,9 +84,6 @@
 	During the project as a group we learnt that...%for example despite each member have a defined role, there needs to be a lot of communication between all members to ensure that. 
 	\subsection{Future Work} %How the project could be extended
 	\section{References}
-	
-	 https://www.gov.uk/using-the-road-159-to-203/roundabouts-184-to-190	
-	Traffic Modelling Guidelines://www.tfl.gov.uk/cdn/static/cms/documents/traffic-modelling-guidelines.pdf
 	
 	\begin{thebibliography}{9}
 			\bibitem{Norman} Norman, Donald. \emph{The Design of Everyday Things} (2002) Basic Books
