--- a/FinalReport.tex
+++ b/FinalReport.tex
@@ -6,14 +6,13 @@
 \usepackage{multirow}
 \usepackage{array} % for m[{x cm} in tables
 
-
 \begin{document}
-	\begin{titlepage}
+	\begin{titlepage} %TITLE PAGE
 	\center
 	\newcommand{\HRule}{\rule{\linewidth}{0.5mm}} 
 \includegraphics[scale=0.2]{kingslogo}\\
 \HRule \\[0.4cm]
-{ \huge \bfseries Final Report}\\[0.4cm] % Title of your document
+{ \huge \bfseries Final Report}\\[0.4cm] % Title
 	\ Team NERD
 \HRule \\[1.5cm]
 {\large \today}\\[10cm] 
@@ -29,7 +28,6 @@
 			Qiu Yun 1430295/1 \\
 	\end{flushleft}
 \end{minipage}
-~
 \begin{minipage}{0.4\textwidth}
 	\begin{flushright} \large
 		\emph{Lecturer:} \\
@@ -40,16 +38,19 @@
 	\end{titlepage}
 	\tableofcontents
 	\newpage
-	\section{Introduction} %Introduce project and aim
-	The intention of this report is to present and demonstrate the progression, development and overall outcome of the Traffic Simulation project.The report is structured into 11 sections each with a purpose to provide further understanding into the steps taken throughout the project as a whole. 
-	\\This first section is an introduction to the whole project and provides an understanding of what is to be expected throughout the entire report. The second section discusses the requirements needed for the project to be deemed successful and appropriate for the cause to fit what is needed. Section three looking into the different existing systems and how the system we are developing is different and any challenges brought about based upon what exists already. Section four discusses the system design including a user manual. In the fifth section of the report is discussion on the process of the actual implementation completed by the two main programmers in the team, which includes how prototypes were created and developed into the final application, as well as some discussion on any system design changes that happened. In the sixth section is a full technical evaluation of the system including the methods used to test the system. In the seventh section is a group evaluation of how the team has been organized throughout the project and then a discussion about the work load division, this section should give a clear insight into the team work throughout project. The eighth section of the report is a conclusion of the project as a whole specifically looking at the lessons learned about program development, what we learnt from about group work and lastly how we would progress in the future with the project. The tenth section is simply the bibliography references to sources we used throughout the report and lastly the eleventh section is the appendices of all additional relevant documents such as a group meetings, personal logs, project plans and documents that supported the system design of the application.\\
+	\section{Introduction} %Introduce project and aim 
+	%Describe the context for the work and the problem you are addressing. Briely summarise what you achieved in the project
+	The intention of this report is to present and demonstrate the progression, development and overall outcome of the Traffic Simulation application created. The report is structured into 11 sections each with a purpose to provide further understanding into the steps taken throughout the project as a whole. 
+	\\ This first section is an introduction to the whole project and provides an understanding of what is to be expected throughout the entire report. The second section discusses the requirements needed for the project to be deemed successful and appropriate for the cause to fit what is needed. Section three looking into the different existing systems and how the system we are developing is different and any challenges brought about based upon what exists already. Section four discusses the system design including a user manual. In the fifth section of the report is discussion on the process of the actual implementation completed by the two main programmers in the team, which includes how prototypes were created and developed into the final application, as well as some discussion on any system design changes that happened. In the sixth section is a full technical evaluation of the system including the methods used to test the system. In the seventh section is a group evaluation of how the team has been organized throughout the project and then a discussion about the work load division, this section should give a clear insight into the team work throughout project. The eighth section of the report is a conclusion of the project as a whole specifically looking at the lessons learned about program development, what we learnt from about group work and lastly how we would progress in the future with the project. The tenth section is simply the bibliography references to sources we used throughout the report and lastly the eleventh section is the appendices of all additional relevant documents such as a group meetings, personal logs, project plans and documents that supported the system design of the application.\\
 	Overall, this introduction should outline what is to be expected throughout the entire and give insight into how the group worked together to successfully create a traffic simulation.
 	
 	\subsection{Scope}%Need help here.
 	
 	\subsection{Objectives} %Making The Map - More maps addtional stuff
 	The aim of the project is to build an application which will simulate cars movement on the UK road system, the users aim is able to find the perfect balance of (word here). If a road system is created using the application where the traffic light system is illogical, for example the wrong traffic light position or wrong traffic light interval this will result in a crash or unfair waiting time.
+	%More needs to be added
 	The value of this system is…
+	What we have achieved 
 	\section{Requirements} %What is needed for the project to be succesful 
 	\section{Related Work} %Examples of systems and dicussion of them compared to what we are creating.
 	\section{System Design}
@@ -98,11 +99,8 @@
 				Date: & 19/01/2015 \\  \hline
 				Attendance: & Mark, Inyeol, Qiu, Jie, Tanda  \\   \hline
 				Duration: & 1 Hour \\  \hline
-				Agenda: & Aim for project, ways of developing project and meet group.
-				members, decide which days are best for meetings and get to
-				know each person in the group. \\  \hline
-				Outcome: &  Each member is to develop some ideas for how initial design of system and look into using JavaScript and PHP and as a
-				means of programming. \\  \hline
+				Agenda: & Get to know the other group members, state aim for project, think of ways to develop project and decide which days are best for meetings.\\  \hline
+				Outcome: &  Each member is to develop some ideas for how initial design of system and look into using JavaScript and PHP and as a means of programming. \\  \hline
 		
 				\multicolumn{2}{ c}{} \\
 				\hline
@@ -110,11 +108,8 @@
 				Date: & 23/01/2015 (1pm)  \\  \hline
 				Attendance: & Inyeol, Tanda, Yun, Qiu  \\   \hline
 				Duration: & 1 Hour \\  \hline
-				Agenda: & Follow on discussion from previous meeting about how the
-				system should be designed. \\ \hline
-				Outcome: &  Inyeol presented group with a UML diagram of a potential
-				system and discussion is raised into changing the programming
-				language to Java. \\  \hline
+				Agenda: & Follow on discussion from previous meeting about how the system should be designed, aswell as dicuss the aim. \\ \hline
+				Outcome: &  Inyeol presented group with a UML diagram of a potential system and discussion is raised into changing the programming language to Java. \\  \hline
 				
 				\multicolumn{2}{ c}{} \\
 				\hline
@@ -221,7 +216,7 @@
 			Date: & 27/02/2015 (1pm) \\  \hline
 			Attendance: & \\ \hline
 			Duration: &  \\  \hline
-			Agenda: & \\ \hline
+			Agenda: & Tanda shall ensure that Mark and Qiu are able to add their contributions constantly to the latex document on Github. Finalise the Pixel --> meters representation issue.\\ \hline
 			Outcome: & \\  \hline
 			\multicolumn{2}{ c}{} \\
 			\hline
@@ -233,15 +228,20 @@
 			Outcome: & \\  \hline
 		\end{tabular}
 
-	
 	\subsection{Personal Logs} %Each member should be completing there own log 
 	\subsection{Usecase Diagram} 
 	\subsection{Class Diagram}
 	\subsection{Sequence Diagram}
 	\subsection{Project Plan} %To be updated
 	\subsection{Gantt Chart}
-	\subsection{Project Risk Analysis Table}
+	\subsection{Project Risk Table}
+	\begin{tabular}{|m{4cm}|m{3cm}|m{3}|m{7}|}
+	\textbf{Risk Description} & \textbf{Likelihood of Occurrence Risk Level} & \textbf{Potential Risk Level Impact on Project} & \textbf{Prevention}\\ \hline 
+	Team members missing meetings & High & Medium & If a group meeting is missed by any member read the minutes and be in contact via email to know what task is expected. \\ \hline
+	Team member gets ill & High & Low & If a team member if ill its pardoned they need to make sure when they feel better get work to get back update and other group members should keep them involved. \\ \hline
+	Team member dropping out & Low & Low & Any disagreements should be address to avoid disruptions between members \\ \hline
+	%Finished document just adding it into latex. 
+	\end{tabular}
 	\subsection{Live Application}
 	\subsection{Package Diagram}
-\end{document}
-
+\end{document} %END OF REPORT
