--- a/FinalReport.tex
+++ b/FinalReport.tex
@@ -235,12 +235,20 @@
 	\subsection{Project Plan} %To be updated
 	\subsection{Gantt Chart}
 	\subsection{Project Risk Table}
-	\begin{tabular}{|m{4cm}|m{3cm}|m{3}|m{7}|}
+
+	\begin{tabular}{|m{5cm}|m{2cm}|m{2.5cm}|m{6cm}|}
+		\hline
 	\textbf{Risk Description} & \textbf{Likelihood of Occurrence Risk Level} & \textbf{Potential Risk Level Impact on Project} & \textbf{Prevention}\\ \hline 
 	Team members missing meetings & High & Medium & If a group meeting is missed by any member read the minutes and be in contact via email to know what task is expected. \\ \hline
 	Team member gets ill & High & Low & If a team member if ill its pardoned they need to make sure when they feel better get work to get back update and other group members should keep them involved. \\ \hline
-	Team member dropping out & Low & Low & Any disagreements should be address to avoid disruptions between members \\ \hline
-	%Finished document just adding it into latex. 
+	Team member dropping out & Low & High & Any disagreements should be address to avoid disruptions between members \\ \hline
+	Poor Project Management& High & High& Project coordinator make sure that member is on track and based on the plan ensure the group is on track and if not address the issue.\\ \hline
+	Missing Deadlines& Medium & High & Make sure deadlines are clearly stated and each member knows when they are. As well as ensure that there is always contingency time incase work load becomes heavy towards deadline\\ \hline
+	Misunderstanding of Task Concepts& High & Medium& \\ \hline
+	Lack of Communication Between Group Members& & & Despite having two group meetings a week continue to be in conversation via Facebook/Email \\ \hline
+	Uneven Distribution of Tasks between team members& High & Medium& Make sure each team member is comfortable with the tasks given, If not within a group meeting raise concern.\\ \hline
+	Task Targets Unclear & Medium & Medium & At each meeting make sure the targets are clear.\\ \hline
+	Drastic Change of Scope& Medium& High & If drastic changes need to be made ensure that they are feasible.\\ \hline
 	\end{tabular}
 	\subsection{Live Application}
 	\subsection{Package Diagram}
